--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -22,6 +22,16 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+        <style>
+            h1 {
+              color: purple;
+              font-size: 4rem;
+            }
+            .skill {
+            color: green;
+            font-weight: bold;
+            }
+          </style>
 	</head>
 	<body>
         <a href="/">Inicio</a>
@@ -42,7 +52,7 @@ const goal = 3;
         </ul>
         <p>Mis habilidades son:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
             {happy && <p>¡Estoy feliz de aprender Astro!</p>}
 
